<resources>
    <string name="app_name">PlanIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Plan It</string>
    <string name="nav_header_subtitle">Event Planner Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email:</string>
    <string name="full_name">Full Name :</string>
    <string name="enter_edit_email">Enter/Edit Email</string>
    <string name="edit_name">Edit name</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_text_preview">Preview Detected Text</string>
    <string name="server_client_id">75819850470-70fr1b82an1med5h2iv62jk2rgitibvj.apps.googleusercontent.com</string>

</resources>
