<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AccountActivity">


    <LinearLayout
        android:layout_width="299dp"
        android:layout_height="404dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="338dp"
            android:layout_height="88dp"
            android:fontFamily="cursive"
            android:text="@string/welcome_back"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="107dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="113dp"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/full_name"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="273dp" />

            <EditText
                android:id="@+id/nameVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="273dp"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="113dp"
                android:layout_height="34dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/email"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="426dp" />

            <EditText
                android:id="@+id/emailVal"
                android:layout_width="211dp"
                android:layout_height="43dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_edit_email"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="171dp"
                tools:layout_editor_absoluteY="426dp"
                tools:targetApi="o" />
        </LinearLayout>

        <Button
            android:id="@+id/editAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:text="@string/save"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="576dp" />

        <Button
            android:id="@+id/button_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Out" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>